--- a/2017-11-15-emacs-configuaration.org
+++ b/2017-11-15-emacs-configuaration.org
@@ -225,82 +225,82 @@ tags: [post-installation, arrangement, automation]
   After Emacs session was started at first you can see .emacs.d
   directory in your home directory.
 
-** GitHub repository cloning
+* GitHub repository cloning
 
-   #+BEGIN_SRC sh :results output
-   mkdir DVCS
-   cd DVCS
-   git clone https://github.com/annelida/stuff.git
-   #+END_SRC
+  #+BEGIN_SRC sh :results output
+  mkdir DVCS
+  cd DVCS
+  git clone https://github.com/annelida/stuff.git
+  #+END_SRC
 
-** Symbolic link for Emacs configuration file creation
+* Symbolic link for Emacs configuration file creation
 
-   #+BEGIN_SRC sh :results output
-   cd .emacs.d/
-   ln -s /home/vikky/DVCS/stuff/Emacs/init_fijitsu.el -T init.el
-   cat init.el
-   #+END_SRC
+  #+BEGIN_SRC sh :results output
+  cd .emacs.d/
+  ln -s /home/vikky/DVCS/stuff/Emacs/init_fijitsu.el -T init.el
+  cat init.el
+  #+END_SRC
 
-** Emacs configuration
+* Emacs configuration
 
-*** Org-bullet
-    M-x package-install [RET] org-bullet [RET]
+** Org-bullet
+   M-x package-install [RET] org-bullet [RET]
 
-*** Voca-builder
-    M-x package-install [RET] voca-builder [RET]
+** Voca-builder
+   M-x package-install [RET] voca-builder [RET]
 
-    in init.el file next string was added:
+   in init.el file next string was added:
 
-    (require 'voca-builder)
-    (setq voca-builder/voca-file "/home/vikky/DVCS/stuff/vocabulary.org")
-    (setq voca-builder/export-file "~/.voca-builder-temp.org")
-    (setq voca-builder/current-tag "Study")
+   (require 'voca-builder)
+   (setq voca-builder/voca-file "/home/vikky/DVCS/stuff/vocabulary.org")
+   (setq voca-builder/export-file "~/.voca-builder-temp.org")
+   (setq voca-builder/current-tag "Study")
 
-*** Key-chord
-    M-x package-install [RET] key-chord [RET]
+** Key-chord
+   M-x package-install [RET] key-chord [RET]
 
-    in init.el file next string was added:
+   in init.el file next string was added:
 
-    (require 'key-chord)
-    (key-chord-mode 1)
-    (key-chord-define-global "QQ"     'voca-builder/search-popup)
-    (key-chord-define-global "FF"     'other-frame)
-    (key-chord-define org-mode-map "DD"     'org-drill)
-    (key-chord-define org-mode-map "AA"     'org-drill-again)
-    (key-chord-define org-mode-map "RR"     'org-drill-resume)
+   (require 'key-chord)
+   (key-chord-mode 1)
+   (key-chord-define-global "QQ"     'voca-builder/search-popup)
+   (key-chord-define-global "FF"     'other-frame)
+   (key-chord-define org-mode-map "DD"     'org-drill)
+   (key-chord-define org-mode-map "AA"     'org-drill-again)
+   (key-chord-define org-mode-map "RR"     'org-drill-resume)
 
-*** Google-translate
-    M-x package-install [RET] google-translate [RET]
+** Google-translate
+   M-x package-install [RET] google-translate [RET]
 
-    in init.el file next string was added:
+   in init.el file next string was added:
 
-    (require 'google-translate)
-    (require 'google-translate-default-ui)
-    (global-set-key "\C-ct" 'google-translate-at-point)
-    (global-set-key "\C-cT" 'google-translate-query-translate)
-    (setq google-translate-default-source-language ' "en")
-    (setq google-translate-default-target-language ' "ru")
+   (require 'google-translate)
+   (require 'google-translate-default-ui)
+   (global-set-key "\C-ct" 'google-translate-at-point)
+   (global-set-key "\C-cT" 'google-translate-query-translate)
+   (setq google-translate-default-source-language ' "en")
+   (setq google-translate-default-target-language ' "ru")
 
-*** Magit
-    M-x package-install [RET] magit [RET]
+** Magit
+   M-x package-install [RET] magit [RET]
 
-    To display information about the current Git repository,
-    set global key:
+   To display information about the current Git repository,
+   set global key:
 
-    (global-set-key (kbd "C-x g") 'magit-status)
+   (global-set-key (kbd "C-x g") 'magit-status)
 
-*** Elfeed
-    M-x package-install [RET] elfeed [RET]
+** Elfeed
+   M-x package-install [RET] elfeed [RET]
 
-    My feed's settings in init.el:
+   My feed's settings in init.el:
 
-    (setq elfeed-feeds
-       '("http://nullprogram.com/feed/"
-         "http://planet.emacsen.org/atom.xml"
-         "http://emacsrocks.com/atom.xml"
-         "http://0--key.github.io/rss.xml"
-         "http://www.quora.com/rss"))
-    ((global-set-key (kbd "C-x w") 'elfeed)
+   (setq elfeed-feeds
+      '("http://nullprogram.com/feed/"
+        "http://planet.emacsen.org/atom.xml"
+        "http://emacsrocks.com/atom.xml"
+        "http://0--key.github.io/rss.xml"
+        "http://www.quora.com/rss"))
+   ((global-set-key (kbd "C-x w") 'elfeed)
 
 
 
