--- a/2017-08-10-relational-algebra.org
+++ b/2017-08-10-relational-algebra.org
@@ -55,4 +55,18 @@ tags: [relational algebra, theory]
    rules and unvails a bit of usage cases and possible limitations,
    thresholds, caveats etc.
 
+* Prerequsites
+
+  As you might expect exactly to achieve our aim we restricted to
+  manually create a test dataset with several tables (relations) there
+  and a few interconnections among them.
+
+** Sample database creation
+
+** Main table
+
+** Satellite tables
+
+* The core operations set
+
 * Usage Cases
