Minor clarifications there

--- a/2017-08-15-py-parallel.org
+++ b/2017-08-15-py-parallel.org
@@ -15,10 +15,12 @@ tags: [concurrent computation]
 #+PROPERTY:header-args :results output :exports both :eval no-export
 
 * The Main Purpose
-  Is to unvail all subtleties about how-to utilize the power of CPU
-  and avert its overloading simultaneously.
+
+  Is to unvail all subtleties about how-to utilize the power of all
+  CPU's cores and avert its overloading simultaneously.
 
 * Incentives
+
   #+BEGIN_QUOTE
   A context switch may happen on a core every fixed amount of time (a
   time slice) because the CPU automatically runs some kernel code
@@ -27,6 +29,7 @@ tags: [concurrent computation]
   also occur when a thread calls functions that makes it unrunnable
   (eg. waiting for IO).
   #+END_QUOTE
+
 * Core features
 
 * Usage Cases
