--- a/2017-06-22-docker-intro.org
+++ b/2017-06-22-docker-intro.org
@@ -26,7 +26,7 @@ tags: [docker, intro]
    #+END_SRC
 
    #+RESULTS:
-   : Docker version 17.03.1-ce, build c6d412e
+   : Docker version 17.12.0-ce, build c97c6d6
 
 ** Help
    #+BEGIN_SRC sh
@@ -119,13 +119,40 @@ tags: [docker, intro]
 
    #+RESULTS:
    : REPOSITORY          TAG                 IMAGE ID            CREATED             SIZE
-   : busybox             latest              8f0abf721946        7 days ago          1.11 MB
-   : debian              latest              4793a1262e10        5 months ago        123 MB
-   : hello-world         latest              d0967c81d126        5 months ago        1.84 kB
-   : docker/whalesay     latest              6b362a9f73eb        2 years ago         247 MB
+   : hello-world         latest              1815c82652c0        10 months ago       1.84kB
 
 ** Test execution
 
+   #+BEGIN_SRC sh
+   docker run hello-world
+   #+END_SRC
+
+   #+RESULTS:
+   #+begin_example
+
+   Hello from Docker!
+   This message shows that your installation appears to be working correctly.
+
+   To generate this message, Docker took the following steps:
+    1. The Docker client contacted the Docker daemon.
+    2. The Docker daemon pulled the "hello-world" image from the Docker Hub.
+    3. The Docker daemon created a new container from that image which runs the
+       executable that produces the output you are currently reading.
+    4. The Docker daemon streamed that output to the Docker client, which sent it
+       to your terminal.
+
+   To try something more ambitious, you can run an Ubuntu container with:
+    $ docker run -it ubuntu bash
+
+   Share images, automate workflows, and more with a free Docker ID:
+    https://cloud.docker.com/
+
+   For more examples and ideas, visit:
+    https://docs.docker.com/engine/userguide/
+
+   #+end_example
+
+** Busy box                                                        :noexport:
    #+BEGIN_SRC sh
    docker run busybox echo "I'm a busybox!"
    #+END_SRC
