--- a/2018-07-31-bookmark-plus.org
+++ b/2018-07-31-bookmark-plus.org
@@ -71,15 +71,18 @@ tags: [Bookmark+, manual+]
 
 * Installation
 
-  Seems it is an absolutely trivial procedure even for inexperienced
-  ~Emacs~ user in particular :-) All what you need to do is to do it
-  by your package manager.
+** Situation in the past
 
-  1. Open ~Emacs~ package manager: =M-x packages-list-packages=;
-  2. Find ~Bookmark+~ there: =C-s kmark=;
-  3. Choose it for installation by typing =i=;
-  4. Execute your choice by typing =x=;
-  5. Have a ~fun~
+   Seems it is an absolutely trivial procedure even for inexperienced
+   ~Emacs~ user in particular :-) All what you need to do is to do it
+   by your package manager.
+
+   1. Open ~Emacs~ package manager: =M-x packages-list-packages=;
+   2. Find ~Bookmark+~ there: =C-s kmark=;
+   3. Choose it for installation by typing =i=;
+   4. Execute your choice by typing =x=;
+   5. Have a ~fun~
+
 
 
 * Helpful help
