First steps further with bookmarks+

--- a/2018-07-31-bookmark-plus.org
+++ b/2018-07-31-bookmark-plus.org
@@ -103,6 +103,15 @@ tags: [Bookmark+, manual+]
       requre 'bookmark+
       #+END_SRC
 
+* Test launch
+
+  I'm absolutely sure that you already have several bookmarks, hence
+  it would be great to look at them in a bit different point fo view.
+  ~Bookmark+~ pervectly compatible with vanilla version of
+  ~bookmarks~, thus all that require to do is just type =C-x p e= and
+  take a peep at the same object at completlely new angle.
+
+
 * Helpful help
 
   Naturally it would be extremely tough task to grasp all these
