--- a/2017-08-15-py-parallel.org
+++ b/2017-08-15-py-parallel.org
@@ -54,3 +54,23 @@ tags: [concurrent computation]
   computation and measure its duration.
 
 * Single infinite computational process
+
+  #+BEGIN_SRC python
+    dumb_number_array = range(1000 * 100000  + 1)
+    print type(dumb_number_array)
+    print dumb_number_array[-1]
+    print sum(dumb_number_array)
+
+    sigma = 0
+    for number in dumb_number_array:
+	sigma += number
+
+    print sigma
+    del(dumb_number_array)
+  #+END_SRC
+
+  #+RESULTS:
+  : <type 'list'>
+  : 100000000
+  : 5000000050000000
+  : 5000000050000000
