--- a/2018-07-31-bookmark-plus.org
+++ b/2018-07-31-bookmark-plus.org
@@ -15,12 +15,22 @@ tags: [Bookmark+, manual+]
 #+PROPERTY:header-args :results output :exports both :eval no-export
 * Preface
 
+  #+BEGIN_QUOTE
+  In preposition that the reader is an eager life-long learner and
+  overcame the stage of unconscious and spontaneous learning. Thus it
+  becomes obvious that the best approach to learn something huge is to
+  split the whole task into the plenty of tiny tidbits of knowledge,
+  determine the sequential and independent ones and take an attempt to
+  study them all in a =mingled form=.
+  #+END_QUOTE
+
   =Bookmark+= is such sophisticated Emacs' extension thus it might be
   unavoidable to use it on the daily basic ASAP. Of course as all
   useful packages it is a bit knotty documented which implicate
   difficulties in its taming. This article is a demure attempt to
   dismantle a hidden power of =Bookmark+= by rigorous dissection all
-  its features, functions and even quirks.
+  its features, functions and even quirks and puns.
+
 * Distinct features
 
   #+BEGIN_QUOTE
