--- a/2019-01-04-time-management.org
+++ b/2019-01-04-time-management.org
@@ -16,14 +16,37 @@ tags: [agenda, time-management]
 * Intro 
 
   The time itself is a such devious matter thus in most cases bipedal
-  avoid managing it at all. Actually it is so easy just to follow the
-  mainstream and check the time once a year. At another hand the time
-  and its amount is a huge crucial part of every productive deed:
-  there are tons of time-related chores, habits and activities.
-
-
+  blithely avoid to manage it at all. Actually it is so easy just to
+  follow the mainstream and check the time once at the New Year party.
+  At another hand the time and its amount is a huge crucial part of
+  every /productive/ deed: there are tons of time-related chores, habits
+  and activities.
 
 * Brief Overview
+
+  For clarity purpose let's imagine two opposite approach to some
+  particular time management:
+
+  - 7-days (5/2  9 - 5) rythm;
+  - 28-day New Moon cycle;
+  - 96-day three-cycle.
+  - 
+  
+** A trivial week
+
+   As the most ancient approaches would ever be. Five consecutive
+   weekdays for work with two-days for restoring. Old-fashion and
+   effective as an iron knife.
+
+** A single Moon cycle
+
+   Well-known as a women cycle.
+
+** A moon quarter
+
+   As it might be obvious - just free Moon's months in the sequence.
+
+
 * Prerequisites
 ** Circadian rhythm
 ** Sunrise */* Sunset
