--- a/2019-01-04-time-management.org
+++ b/2019-01-04-time-management.org
@@ -30,7 +30,7 @@ tags: [agenda, time-management]
   - 7-days (5/2  9 - 5) rythm;
   - 28-day New Moon cycle;
   - 96-day three-cycle.
-  - 
+  - 96-day three-cycle or a quorter of the year.
   
 ** A trivial week
 
