Several general concepts

--- a/2019-01-04-time-management.org
+++ b/2019-01-04-time-management.org
@@ -22,6 +22,16 @@ tags: [agenda, time-management]
   every /productive/ deed: there are tons of time-related chores,
   habits and activities.
 
+  Productivity by its definition relates on time: in general it is the
+  amount of your efforts along a some time. It's not surprise at all
+  that is a speed, consistency and some times even a rapture to
+  produce some unique and ingenious.
+
+  Reasonable to emphasize that relation depending on the main aim of
+  your activity - high hopes require a lot of time. So, what if try to
+  tame your personal time-table and define it on several hundreds of
+  days ahead with a much achievable clarity and order.
+
 * Brief Overview
 
   For clarity purpose let's imagine three opposite approach to some
